# SEN-201_BibliographyManager

./: .gitignore  PPDJ_TestPlan.xlsx  README.md  bibliography.db  bibliography_manager.py  pyproject.toml  pytest.ini  run_app.py
assets/: convert_icons.py
bibliography_manager/: __init__.py  app.py  db.py
bibliography_manager/services/: entries_service.py  refsets_service.py
bibliography_manager/ui/: main_window.py
linux/: Linux_Installation.md
quality_assessment/: code_review.txt
scripts/: convert_icons.py  convert_icons_requirement.md
src/features/bibtex/: __init__.py  bibtex.py
src/features/bibtex/tests/: bibtex_test.py  test_result.rd
src/features/database/: __init__.py  db.py
src/features/database/implentaions/: database_connector.py  db.py
src/features/database/implentaions/cruds/: author_crud.py
src/features/database/implentaions/models/: author_model.py
src/features/database/implentaions/operation/: entry_ops.py
src/features/database/interfaces/: interfcace.rd
src/features/database/operation/: entry_ops.py  entry_set_ops.py  refset_ops.py  set_entries_ops.py
src/features/database/tests/: conftest.py  db_test.py  entry_set_test.py  entry_test.py  test_result.rd
src/features/entries_services/: entries_service.py
src/features/reference/: addReference.py  entries_service.py
src/features/reference-set/: referenceset.py  refsets_service.py
src/features/refsets_services/: refsets_service.py
src/features/ui/: main_window.py
src/main/: app.py
useful_doc/: PPDJ_DeploymentPlan.docx
